--- a/app/components/cases/status-pill.hbs
+++ b/app/components/cases/status-pill.hbs
@@ -1,7 +1,11 @@
 {{#if this.loadStatusText.isRunning}}
   <AuLoader @inline={{true}} @hideMessage={{true}} />
 {{else}}
-  <AuPill @size="small" @skin="ongoing">
-    {{capitalize this.statusText}}
-  </AuPill>
+  {{#if this.statusText}}
+    <AuPill @size="small" @skin="ongoing">
+      {{capitalize this.statusText}}
+    </AuPill>
+  {{else}}
+    <p class="au-u-text-center">-</p>
+  {{/if}}
 {{/if}}
