--- a/app/components/publications/publication/publication-navigation.hbs
+++ b/app/components/publications/publication/publication-navigation.hbs
@@ -3,7 +3,9 @@
     @isHierarchicalBack={{true}}
     @route="publications.overview"
     data-test-publication-nav-go-back
-  />
+  >
+    {{t "all-cases"}}
+  </Auk::Tab>
   <Auk::Tab
     @route="publications.publication.case"
     data-test-publication-nav-case
