--- a/app/components/subcases/subcases-overview-header.hbs
+++ b/app/components/subcases/subcases-overview-header.hbs
@@ -5,10 +5,9 @@
         <AuLink
           @skin="button-naked"
           @icon="hierarchical-back"
-          @hideText={{true}}
-          {{on "click" this.transitionBack}}
+          @route="cases"
         >
-          {{t "back"}}
+          {{t "all-cases"}}
         </AuLink>
       </Auk::Toolbar::Item>
       <Auk::Toolbar::Item>
