KAS-4537 Revert weird codemods changes

--- a/app/templates/signatures/decisions.hbs
+++ b/app/templates/signatures/decisions.hbs
@@ -42,14 +42,14 @@
       </th>
       <Utils::ThSortable
         @currentSorting={{this.sortField}}
-        @field=<sign-subcase.sign-marking-activity.piece.name />
+        @field={{"sign-subcase.sign-marking-activity.piece.name"}}
         @onChange={{this.changeSort}}
         @label={{t "document-name"}}
       />
       <th>{{t "document-type"}}</th>
       <Utils::ThSortable
         @currentSorting={{this.sortField}}
-        @field=<decision-activity.start-date />
+        @field={{"decision-activity.start-date"}}
         @onChange={{this.changeSort}}
         @label={{t "meeting-date"}}
       />
