--- a/app/components/utils/government-areas/government-areas-panel.hbs
+++ b/app/components/utils/government-areas/government-areas-panel.hbs
@@ -29,7 +29,8 @@
       <Auk::Panel::Body @noPadding={{true}}>
         {{#if @ratification}}
         <div class="auk-u-m-4 auk-u-mb-2 auk-u-mt-2">
-          <p><strong>Thema's:</strong> Gezondheid, justitie, media</p>
+          <p><strong>Thema's:</strong> Gezondheid, Justitie, Media</p>
+          <p><strong>Beleidsvelden:</strong> Opgroeien, Bestuurszaken</p>
         </div>
         {{/if}}
         <table class="auk-table">
@@ -61,7 +62,8 @@
       <Auk::Panel::Body>
         {{#if @ratification}}
         <div class="auk-u-m-4 auk-u-mb-2 auk-u-mt-2">
-          <p><strong>Thema's:</strong> Gezondheid, justitie, media</p>
+          <p><strong>Thema's:</strong> Gezondheid, Justitie, Media</p>
+          <p><strong>Beleidsvelden:</strong> Opgroeien, Bestuurszaken</p>
         </div>
         {{/if}}
         <Auk::EmptyState data-test-government-areas-empty-state @message={{t "no-added-government-fields"}} />
