--- a/app/templates/cases/case/subcases-demo/subcase-demo.hbs
+++ b/app/templates/cases/case/subcases-demo/subcase-demo.hbs
@@ -56,7 +56,7 @@
                   Laatste wijziging op 2-12-2023 17:02
                 </div>
                 <div class="au-u-margin-top-tiny">
-                  <AuPill @size="small" @skin="warning">Act in afwachting</AuPill>
+                  <AuPill @size="small" @skin="warning">Nog geen beslissing ingesteld</AuPill>
                 </div>
               </LinkTo>
             </li>
@@ -103,7 +103,7 @@
               >
                 <div class="auk-sidebar__label au-u-flex au-flex--vertical-center au-u-flex--spaced-tiny">
                   <strong>
-                    Tweede principiële goedkeuring
+                    Principiële goedkeuring
                   </strong>
                 </div>
                 <div class="auk-sidebar__sublabel au-u-margin-top-none">
@@ -121,7 +121,7 @@
               >
                 <div class="auk-sidebar__label au-u-flex au-flex--vertical-center au-u-flex--spaced-tiny">
                   <strong>
-                    Eerste principiële goedkeuring
+                    Principiële goedkeuring
                   </strong>
                 </div>
                 <div class="auk-sidebar__sublabel au-u-margin-top-none">
