--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -33,7 +33,7 @@
         @meeting={{this.meeting}}
         @reverseSortedAgendas={{this.reverseSortedAgendas}}
         @onDeleteAgendaitem={{this.reassignNumbersAndNavigateToNeighbouringAgendaitem}}
-        @onSendToVp={{this.reloadParliamentFlow}}
+        @onSendToVp={{this.pollParliamentFlow}}
       />
     </Group.Item>
   </Toolbar.Group>
