KAS-4540 fix flattened piece should be visible for other profiles

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -86,7 +86,7 @@
                 </p>
               {{/if}}
               {{#if
-                (await (this.canViewSignedPiece))
+                (await (this.canViewConfidentialPiece))
               }}
                 {{#if this.piece.signedPieceCopy.file}}
                   <p>
