--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -221,7 +221,7 @@
           {{@piece.name}}
         {{/if}}
       </Auk::KeyValue>
-      {{#if (and this.isSignaturesEnabled (user-may "manage-signatures") (await (this.canViewSignedPiece)))}}
+      {{#if (await this.canViewSignedPiece)}}
         {{#if @piece.signedPiece.file}}
           <div class="auk-key-value-item">
             <div class="auk-key-value-item__label auk-u-max-width-medium">{{t "signed-document-certified"}}</div>
@@ -264,7 +264,6 @@
       {{/if}}
       {{#if
         (and
-          this.isSignaturesEnabled
           this.loadSignedPieces.isIdle
           this.signedPieceCopy.file
           (await (this.canViewConfidentialPiece))
